# small_ehr

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.testing  LICENSE  README.md  compose.yaml  compose_for_testing.yaml  docker-compose.yml
cli_commands/: Cargo.toml
cli_commands/src/: lib.rs
database/: Cargo.toml
database/src/: lib.rs  models.rs  schema.rs
file_utils/: synthea_allergies.py  synthea_patients.py  synthea_providers.py
import/: Cargo.toml
import/src/: lib.rs
json_api/: Cargo.toml
json_api/src/: lib.rs  organizations.rs
migrations/2024-05-25-010000_create_patients/: up.sql
migrations/2024-05-25-010001_create_organizations/: up.sql
migrations/2024-05-25-010002_create_providers/: up.sql
migrations/2024-05-25-010003_create_payers/: up.sql
migrations/2024-05-25-010004_create_payer_transitions/: down.sql  up.sql
migrations/2024-05-25-010005_create_encounters/: up.sql
migrations/2024-05-25-011047_create_allergies/: down.sql  up.sql
migrations/2024-05-25-114407_create_careplans/: down.sql  up.sql
migrations/2024-05-25-115230_create_claims/: up.sql
migrations/2024-05-25-121556_create_claims_transactions/: down.sql  up.sql
migrations/2024-05-25-122952_create_conditions/: down.sql  up.sql
migrations/2024-05-26-010508_create_devices/: down.sql  up.sql
migrations/2024-05-26-010837_create_encounters/: down.sql  up.sql
migrations/2024-05-26-011203_create_imaging_studies/: down.sql  up.sql
migrations/2024-05-26-011502_create_immunizations/: down.sql  up.sql
migrations/2024-05-26-011740_create_medications/: down.sql  up.sql
migrations/2024-05-26-012446_create_observations/: down.sql  up.sql
migrations/2024-05-26-012731_create_organizations/: down.sql  up.sql
migrations/2024-05-26-013049_create_patients/: down.sql  up.sql
migrations/2024-05-26-013404_create_payer_transitions.csv/: down.sql  up.sql
migrations/2024-05-26-013656_create_payers/: down.sql  up.sql
migrations/2024-05-26-014011_create_procedures/: down.sql  up.sql
migrations/2024-05-26-014315_create_providers/: down.sql  up.sql
migrations/2024-05-26-014526_create_supplies/: down.sql  up.sql
migrations/2024-06-27-023532_update_june/: down.sql  up.sql
rest_api/: Cargo.toml
rest_api/src/: lib.rs
rest_json_api/: Cargo.toml
rest_json_api/src/: lib.rs  patients.rs  payers.rs  providers.rs
src/: main.rs  models.rs  schema.rs
startup/: Cargo.toml
startup/file_utils/: synthea_organizations.py
startup/src/: main.rs  models.rs
