[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
http-body-util = "0.1.2"
serde = { version = "1.0.205", default-features = false, features = ["derive"] }
serde_json = "1.0.122"
tokio = { version="1.39.2", features = ["full"] }
tower = { version = "0.4.13", default-features = false, features = ["full"] }
