[package]
name = "small_ehr"
version = "0.1.0"
edition = "2021"


[dependencies]
import = { path = "../import" }
database = { path = "../database" }

bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
diesel = { version = "2.1.6", default-features = false, features = ["postgres", "r2d2", "32-column-tables", "uuid", "chrono", "numeric"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
