[package]
name = "small_ehr"
version = "0.1.0"
edition = "2021"


[dependencies]
import = { path = "../import" }
database = { path = "../database" }
json_api = { path = "../json_api" }
cli_commands = { path = "../cli_commands" }

bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

clap = { version = "4.5.4", features = ["derive"] }

csv = "1.3.0"

diesel = { version = "2.1.6", default-features = false, features = ["postgres", "r2d2", "32-column-tables", "uuid", "chrono", "numeric"] }

dotenv = "0.15.0"

# serde = { version = "1.0.203", features = ["derive"] }
# axum = "0.7.5"
# tower = { version = "0.4.13", features = ["full"] }
# serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
